# Flex-To-Run-A-mini-compiler-for-lightweight-custom-language

./: CMakeLists.txt  Makefile  SymbolTable.cpp  SymbolTable.h  a.out  ast.cpp  ast.h  ast_interface.cpp  ast_interface.h  ast_printer.cpp  codegen.cpp  codegen.h  compiler  lex.yy.c  lexer.l  main.cpp  output.s  parser  parser.output  parser.report  parser.tab.c  parser.tab.h  parser.y  test.prog  trial.cpp
